[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Launcher.gd" type="Script" id=1]
[ext_resource path="res://Images/Launch4.png" type="Texture" id=2]
[ext_resource path="res://Images/light.png" type="Texture" id=3]
[ext_resource path="res://Sons/insertion_piece.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 61, 122 )

[node name="Launcher4" type="Node2D"]
script = ExtResource( 1 )

[node name="Launch4" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
z_index = 3
z_as_relative = false
texture = ExtResource( 2 )

[node name="Spawner" type="Node2D" parent="."]

[node name="Spawn" type="AudioStreamPlayer" parent="Spawner"]
stream = ExtResource( 4 )

[node name="Lights" type="Node2D" parent="."]

[node name="Light2D" type="Light2D" parent="Lights"]
position = Vector2( -0.29631, -48.9459 )
texture = ExtResource( 3 )
texture_scale = 0.2

[node name="Light2D2" type="Light2D" parent="Lights"]
position = Vector2( 0.000991821, -30.8378 )
enabled = false
texture = ExtResource( 3 )
texture_scale = 0.2

[node name="Light2D3" type="Light2D" parent="Lights"]
position = Vector2( 0.000991821, -11.7297 )
enabled = false
texture = ExtResource( 3 )
texture_scale = 0.2

[node name="Timer" type="Timer" parent="Lights"]
wait_time = 0.5
autostart = true

[node name="Nope" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nope"]
shape = SubResource( 1 )

[connection signal="timeout" from="Lights/Timer" to="." method="_on_Timer_timeout"]
